Gallery as own page

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,8 +1,11 @@
+.main-gallery-heading {
+  text-align: center;
+  margin-block: 5em 3em;
+}
 .main-gallery-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2em;
   flex-wrap: wrap;
-  margin-top: 2em;
 }
