--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,18 @@
+.header-wrapper {
+  position: sticky;
+  top: 0;
+  border-bottom: 0.5px solid #d3d3d3;
+  background-color: #fff;
+  z-index: 2;
+}
+
 .page-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   padding: 2rem;
-  max-width: 1200px;
+  max-width: 1280px;
   margin-inline: auto;
 }
 
