--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
-main {
-  border-top: 0.5px solid #d3d3d3;
+.outlet-wrapper {
+  max-width: 1300px;
+  margin-inline: auto;
+  padding-inline: 1rem;
 }
