--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,10 @@
   margin: 0;
   padding: 0;
 }
+
+html {
+  font-size: 1.1rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  --h1-font: "Italianno", cursive;
+}
