--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.header-wrapper {
+.page-header {
   position: sticky;
   top: 0;
   border-bottom: 0.5px solid #d3d3d3;
@@ -6,9 +6,10 @@
   z-index: 2;
 }
 
-.page-header {
+.header-wrapper {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  /* justify-content: space-between; */
   align-items: center;
 
   padding: 2rem;
@@ -16,11 +17,9 @@
   margin-inline: auto;
 }
 
-.title-wrapper {
-  cursor: pointer;
-}
-
 .page-title {
+  cursor: pointer;
+  font-family: var(--h1-font);
   font-size: 3.2rem;
   line-height: 1.1;
 }
