style: gallery heading margin

--- a/src/pages/Gallery/Gallery.css
+++ b/src/pages/Gallery/Gallery.css
@@ -1,6 +1,10 @@
 .main-gallery-heading {
   text-align: center;
   margin-block: 2em 3em;
+
+  @media screen and (max-width: 700px) {
+    margin-block: 1em;
+  }
 }
 .main-gallery-wrapper {
   display: flex;
