--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -39,7 +39,7 @@
   position: absolute;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 720px) {
   .navlinks-container {
     flex-direction: column;
     justify-content: start;
@@ -52,7 +52,7 @@
 
     width: 75vw;
     height: 100dvh;
-    padding: 4rem 1.5rem;
+    padding: 2.2rem 0 2rem 1.5rem;
     background-color: #fff;
     box-shadow: -5px 0 5px #4444443d;
 
@@ -68,7 +68,9 @@
     display: block;
     padding: 0.55em;
   }
-
+  .close-navbar-btn {
+    align-self: end;
+  }
   #navbar-active:checked ~ .navlinks-container {
     right: 0;
   }
