--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,21 +8,33 @@
 
 .header-wrapper {
   display: flex;
-  flex-direction: column;
-  /* justify-content: space-between; */
+  /* flex-direction: column; */
+  justify-content: space-between;
   align-items: center;
+  /* padding: 1rem; */
 
-  padding: 2rem;
+  padding: 2rem 0 0 1.5rem;
   max-width: 1280px;
   margin-inline: auto;
 
   transition: all 200ms;
+
+  @media screen and (max-width: 700px) {
+    padding-top: 1rem;
+  }
 }
 
+/* @media screen and (max-width: 700px) {
+  .header-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1rem;
+  }
+} */
 .compact {
   flex-direction: row;
   justify-content: space-between;
-  padding-block: 1rem;
+  padding: 1rem;
 }
 
 .page-title {
