--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,15 @@
   margin-inline: auto;
   padding-inline: 1rem;
 }
+
+.page-wrapper {
+  width: fit-content;
+  margin-inline: auto;
+}
+
+@media screen and (min-width: 700px) {
+  .page-wrapper {
+    display: flex;
+    gap: 5vw;
+  }
+}
